Fixed grid spacing issue with arbitrary widths and heights

--- a/css/W2P.css
+++ b/css/W2P.css
@@ -130,7 +130,7 @@ div#message {
   left: 0px;
   top: 0px;
   width: 645px;
-  height: 392px;
+  height: 390px;
   visibility: hidden;  
   border-radius: 2px;
 }     
